<resources>
    <string name="app_name">우리동네 악취 모니터링</string>
    <string name="image_description">description</string>
    <string name="server_no_response">서버와 통신이 원활하지 않습니다.\n관리자에게 문의해주세요.</string>
    <string name="app_termination">서버 응답이 없어 어플리케이션을 종료합니다.\n문제 지속시 관리자에게 문의해주세요.</string>
    <string name="weather_server_no_response">날씨 정보 서버와 통신이 원활하지 않습니다.\n문제 발생시 관리자에게 문의해주세요.</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="sign_up">회원가입</string>
    <string name="main">악취 접수</string>
    <string name="register">악취 접수 등록</string>
    <string name="history">악취 접수 이력</string>
    <string name="my_page">My Page</string>
    <string name="sign_in_welcome_text">환영합니다!</string>
    <string name="sign_in_lost_password_text"><u>비밀번호를 잊으셨나요?</u></string>
    <string name="sign_in_ask_text">관리자에게 문의해 주십시오.</string>
    <string name="sign_in_unapproved">관리자 승인이 필요한 회원입니다.</string>
    <string name="sign_in_status">로그인 정보가 일치하지 않아 로그인에 실패하였습니다. 로그인 화면으로 이동합니다.</string>
    <string name="privacy_policy_agreement">개인정보 수집 및 이용 동의</string>
    <string name="privacy_policy_essential">(필수)</string>
    <string name="privacy_policy_not_checked">개인정보 수집 및 이용 동의에 동의해주세요.</string>
    <string name="sign_up_user_id">아이디</string>
    <string name="sign_up_check_duplicate">중복확인</string>
    <string name="sign_up_password">비밀번호</string>
    <string name="sign_up_password_confirm">비밀번호 확인</string>
    <string name="sign_up_user_name">이름</string>
    <string name="sign_up_user_phone">휴대전화번호</string>
    <string name="sign_up_certification_request">인증요청</string>
    <string name="sign_up_certification_number">인증번호</string>
    <string name="sign_up_user_age">나이</string>
    <string name="sign_up_gender">성별</string>
    <string name="sign_up_region">지역</string>
    <string name="sign_up_available_user_id">회원 가입이 가능한 아이디입니다.</string>
    <string name="sign_up_duplicate_user_id">이미 사용중인 아이디입니다.</string>
    <string name="sign_up_duplicate_user_phone">이미 가입된 휴대전화번호입니다.</string>
    <string name="sign_up_not_clicked_check_duplicate_user_id">아이디 중복 확인을 해주세요.</string>
    <string name="sign_up_not_clicked_certification_request_user_phone">인증요청을 해주세요.</string>
    <string name="sign_up_certification_request_fail">인증 요청에 실패하였습니다.\n문제 지속시 관리자에게 문의해주세요.</string>
    <string name="sign_up_certification_request_success">인증 번호를 문자메시지로 발송하였습니다.\n확인후 입력해주세요.</string>
    <string name="sign_up_incorrect_certification_number">인증번호가 일치하지 않습니다.</string>
    <string name="sign_up_incorrect_form_user_id">아이디 형식이 올바르지 않습니다.\n띄어쓰기를 제외한 4~20자리 영문과 숫자 조합으로 입력해주세요.</string>
    <string name="sign_up_incorrect_form_user_password">비밀번호 형식이 올바르지 않습니다.\n띄어쓰기를 제외한 4~15자 영문, 숫자, 특수문자로 입력해주세요.\n특수문자는 &#126;, &#33;, &#64;, &#35;, &#36;, &#37;, &#94;, &#38;, &#42;, &#40;, &#41;, &#43;, &#124;, &#61; 만 가능합니다.</string>
    <string name="sign_up_incorrect_form_user_name">이름 형식이 올바르지 않습니다.\n띄어쓰기를 제외한 2~10자리 한글로 입력해주세요.</string>
    <string name="sign_up_incorrect_form_user_age">나이 형식이 올바르지 않습니다.\n띄어쓰기를 제외한 1~3자리 숫자로 입력해주세요.</string>
    <string name="sign_up_fail">회원가입에 실패하였습니다.\n문제 지속시 관리자에게 문의해주세요.</string>
    <string name="sign_up_success">회원가입 신청이 완료되었습니다.\n관리자 승인후 서비스 이용이 가능합니다.</string>
    <string name="blank_user_id">아이디를 입력해주세요.</string>
    <string name="blank_user_password">비밀번호를 입력해주세요.</string>
    <string name="blank_user_password_confirm">비밀번호 확인을 입력해주세요.</string>
    <string name="blank_user_name">이름을 입력해주세요.</string>
    <string name="blank_user_phone">휴대전화번호를 입력해주세요.</string>
    <string name="blank_certification_number">인증번호를 입력해주세요.</string>
    <string name="blank_user_age">나이를 입력해주세요.</string>
    <string name="blank_user_incorrect_password">비밀번호가 서로 일치하지 않습니다.</string>
    <string name="blank_user_gender">성별을 선택해주세요.</string>
    <string name="blank_user_region">지역을 선택해주세요.</string>
    <string name="user_id_length_exceed">아이디를 4자리 이상 20자리 이하로 입력해주세요.</string>
    <string name="user_password_length_exceed">비밀번호를 4자리 이상 15자리 이하로 입력해주세요.</string>
    <string name="user_password_confirm_length_exceed">비밀번호 확인을 4자리 이상 15자리 이하로 입력해주세요.</string>
    <string name="incorrect_data">아이디 혹은 비밀번호가 일치하지 않습니다.</string>
    <string name="location_text">위치 기능이 꺼져있습니다. 접수 등록을 하려면 설정에서 위치 기능을 켜주세요.</string>
    <string name="permission_location_text">접수 등록을 하려면 설정에서 위치 권한을 허용해주세요.</string>
    <string name="permission_notification_text">알림 기능을 사용하려면 설정에서 알림 권한을 허용해주세요.</string>
    <string name="permission_camera_text">사진 첨부 기능을 사용하려면 설정에서 카메라 권한과 저장공간 권한을 허용해주세요.</string>
    <string name="permission_camera_text_higher_33">사진 첨부 기능을 사용하려면 설정에서 카메라 권한과 사진 및 동영상 권한을 허용해주세요.</string>
    <string name="do_not_show_up">오늘 하루 동안 보지 않기</string>
    <string name="confirmation">확인</string>
    <string name="registration">등록</string>
    <string name="cancellation">취소</string>
    <string name="completion">완료</string>
    <string name="modification">수정</string>
    <string name="star_text">*</string>
    <string name="user_id_hint">4자리 이상 20자리 이하 입력</string>
    <string name="password_hint">4자리 이상 15자리 이하 입력</string>
    <string name="user_name_hint">실명 입력</string>
    <string name="certification_number_hint">인증번호 입력</string>
    <string name="age_hint">나이 입력</string>
    <string name="gender_hint">성별 선택</string>
    <string name="none">선택안함</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="main_current_weather">%1$s 현재 날씨</string>
    <string name="main_temperature">기온 : %1$s °C</string>
    <string name="main_humidity">습도 : %1$s %%</string>
    <string name="main_wind">풍향 : %1$s</string>
    <string name="main_wind_speed">풍속 : %1$s m&#47;s</string>
    <string name="main_register_status">금일 악취 접수 현황</string>
    <string name="main_choose_smell_intensity">악취 강도를 선택해주세요.</string>
    <string name="register_selected_data_text">선택한 취기 및 악취강도</string>
    <string name="register_unselected_smell_type_text">취기를 선택해주세요</string>
    <string name="register_upload_image_text">촬영한 사진이 있다면 첨부해주세요</string>
    <string name="register_memo_text">추가 전달 사항이 있다면 입력해주세요</string>
    <string name="register_success_text">등록이 완료되었습니다.</string>
    <string name="register_fail_text">등록이 실패하였습니다.\n문제 지속시 관리자에게 문의해주세요.</string>
    <string name="register_incorrect_region">가입시 설정한 지역과 현재 지역이 일치하지 않아 등록이 실패하였습니다.\n가입시 설정한 지역에서 다시 시도해주세요.</string>
    <string name="register_server_fail_text">서버와 통신이 원활하지 않아 등록이 실패하였습니다.\n문제 지속시 관리자에게 문의해주세요.</string>
    <string name="register_not_register_time_text">등록 가능한 시간대가 아닙니다.</string>
    <string name="register_select_smell_type">취기 선택</string>
    <string name="register_impossible_registration_text">서버 응답이 없어 등록할 수 없습니다.</string>
    <string name="history_search_text">조회</string>
    <string name="history_search_date_text">일자</string>
    <string name="history_search_smell_value_text">악취 강도</string>
    <string name="history_text">이력</string>
    <string name="history_no_more_data">더 이상 데이터가 존재하지 않습니다.</string>
    <string name="history_no_data">검색 결과가 존재하지 않습니다.</string>
    <string name="my_page_push_text">푸쉬</string>
    <string name="my_page_current_password_text">현재 비밀번호</string>
    <string name="my_page_new_password_text">새 비밀번호</string>
    <string name="my_page_new_password_confirm_text">새 비밀번호 확인</string>
    <string name="my_page_password_change_success_text">비밀번호가 변경되었습니다.</string>
    <string name="my_page_incorrect_current_password__text">현재 비밀번호가 일치하지 않습니다.</string>
    <string name="my_page_blank_current_password_text">현재 비밀번호를 입력해주세요.</string>
    <string name="my_page_blank_new_password_text">새 비밀번호를 입력해주세요.</string>
    <string name="my_page_blank_new_password_confirm_text">새 비밀번호 확인을 입력해주세요.</string>
    <string name="my_page_incorrect_new_password_text">새 비밀번호가 서로 일치하지 않습니다.</string>
    <string name="my_page_password_change_fail_text">새 비밀번호가 서로 일치하지 않습니다.</string>
    <string name="my_page_isDelete">회원 탈퇴를 하시겠습니까?</string>
    <string name="my_page_deleteUser">회원 탈퇴가 완료되었습니다.</string>
    <string name="my_page_notFoundUser">회원이 존재하지 않습니다.</string>
    <string name="notice_text">공지사항</string>
    <string name="notice_title">제목</string>
    <string name="notice_contents">내용</string>
    <string name="statistics_current_status">우리동네 악취 현황</string>
    <string name="statistics_sensing_count_text">감지 횟수</string>
    <string name="statistics_sensing_count">%1$s 건</string>
    <string name="statistics_sensing_ratio_text">감지 비율</string>
    <string name="statistics_sensing_ratio">%1$s %%</string>
    <string name="statistics_sensing_intensity_text">주요 감지 악취 강도</string>
    <string name="statistics_sensing_intensity">%1$s</string>
    <string name="statistics_sensing_type_text">주요 악취</string>
    <string name="statistics_sensing_type">%1$s</string>
</resources>