<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/user_password"
            android:hint="@string/sign_up_user_id"
            style="@style/hint_edit_text"/>

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/sign_up_password"
            android:inputType="textPassword"
            style="@style/hint_edit_text"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_below="@id/user_password"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#3498db"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#5E5E5E">

                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#5E5E5E"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/lost_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_layout"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in_lost_password_text"/>

    </RelativeLayout>
</layout>